<resources>
    <string name="app_name">DnDCompanionApp</string>
    <string name="STR">STR</string>
    <string name="DEX">DEX</string>
    <string name="CON">CON</string>
    <string name="INT">INT</string>
    <string name="WIS">WIS</string>
    <string name="CHA">CHA</string>
    <string name="ability_scores">Ability\nScores</string>

    <string name="search_for">Search For:</string>
    <string name="new_character">New Character</string>
    <string name="character_name">CHARACTER NAME</string>
    <string name="race">Race:</string>
    <string name="classes">Class:</string>
    <string name="level">Level:</string>
    <string name="name">Name:</string>
    <string name="create">Create</string>
    <string name="dice">Dice Roller</string>
    <string name="die_type">Dice Type:</string>
    <string name="die_num">Number of Dice:</string>
    <string name="roll">Roll</string>

    <array name="classTypes">
        <item>Barbarian</item>
        <item>Bard</item>
        <item>Cleric</item>
        <item>Druid</item>
        <item>Fighter</item>
        <item>Monk</item>
        <item>Paladin</item>
        <item>Ranger</item>
        <item>Rogue</item>
        <item>Sorcerer</item>
        <item>Warlock</item>
        <item>Wizard</item>
    </array>

    <array name="races">
        <item>Dwarf</item>
        <item>Elf</item>
        <item>Half-Elf</item>
        <item>Human</item>
        <item>Half-Orc</item>
        <item>Halfling</item>
        <item>Tiefling</item>
        <item>Gnome</item>
        <item>Dragonborn</item>
    </array>

    <string-array name="levels">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
    <array name="menu">
        <item>Spell List</item>
        <item>Items List</item>
        <item>Conditions</item>
        <item>Dice Roller</item>
    </array>

    <array name="specialties">
        <item>Skills and Saving Throws</item>
        <item>Gear and Items</item>
        <item>Attacks and Spellcasting</item>
        <item>Other Proficiencies</item>
    </array>

    <array name="skills_saving_throws">
        <item>Strength Save</item>
        <item>Dexterity Save</item>
        <item>Constitution Save</item>
        <item>Intelligence Save</item>
        <item>Wisdom Save</item>
        <item>Charisma Save</item>
        <item>Acrobatics (Dex)</item>
        <item>Animal Handling (Wis)</item>
        <item>Arcana (Int)</item>
        <item>Athletics (Str)</item>
        <item>Deception (Cha)</item>
        <item>History (Int)</item>
        <item>Insight (Wis)</item>
        <item>Intimidation (Cha)</item>
        <item>Investigation (Int)</item>
        <item>Medicine (Wis)</item>
        <item>Nature (Int)</item>
        <item>Perception (Wis)</item>
        <item>Performance (Cha)</item>
        <item>Persuasion (Cha)</item>
        <item>Religion (Int)</item>
        <item>Slight of Hand (Dex)</item>
        <item>Stealth (Dex)</item>
        <item>Survival (Wis)</item>
    </array>

    <string-array name="dice_types">
        <item>d4</item>
        <item>d6</item>
        <item>d8</item>
        <item>d10</item>
        <item>d12</item>
        <item>d20</item>
    </string-array>

    <string-array name="numDice">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

    <string-array name="item_types">
        <item>Any</item>
        <item>Weapon</item>
        <item>Armor</item>
        <item>General</item>
    </string-array>
</resources>
