<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/char_create_layout"
    android:background="@drawable/parchment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/char_create_view">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:id="@+id/char_create_menuButton"
            android:src="@drawable/menu_icon_2"
            android:background="@drawable/border_thick"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_character"
            android:layout_toRightOf="@id/char_create_menuButton"
            android:background="@drawable/border"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_alignParentRight="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/char_create_menuButton"
            android:id="@+id/char_create_race"
            android:text="@string/race"
            android:padding="5dp"
            android:textSize="20sp"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/char_create_race"
            android:layout_alignParentRight="true"
            android:id="@+id/char_create_race_spinner">
        </Spinner>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/char_create_race"
            android:id="@+id/char_create_class"
            android:text="@string/classes"
            android:padding="5dp"
            android:textSize="20sp"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/char_create_class"
            android:id="@+id/char_create_class_spinner">
        </Spinner>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/char_create_class"
            android:id="@+id/char_create_level"
            android:text="@string/level"
            android:padding="5dp"
            android:textSize="20sp"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/char_create_level"
            android:id="@+id/char_create_level_spinner">
        </Spinner>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/char_create_level"
            android:id="@+id/char_create_name"
            android:text="@string/name"
            android:padding="5dp"
            android:textSize="20sp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:id="@+id/char_create_name_edit"
            android:inputType="textPersonName"
            android:layout_alignTop="@id/char_create_name"
            android:layout_toEndOf="@+id/char_create_name" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/char_create_firstStats"
            android:layout_below="@id/char_create_name"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/char_create_str"
                android:text="@string/STR"
                android:textSize="20sp"
                android:padding="5dp"
                android:textAlignment="center"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/char_create_dex"
                android:text="@string/DEX"
                android:textSize="20sp"
                android:padding="5dp"
                android:textAlignment="center"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/char_create_con"
                android:text="@string/CON"
                android:textSize="20sp"
                android:padding="5dp"
                android:layout_weight="1"
                android:textAlignment="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/char_create_firstStats_edits"
            android:layout_below="@id/char_create_firstStats"
            >
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/char_create_str_edit"
                android:textSize="20sp"
                android:padding="5dp"
                android:inputType="number"
                android:textAlignment="center"
                android:layout_weight="1"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/char_create_dex_edit"
                android:textSize="20sp"
                android:padding="5dp"
                android:inputType="number"
                android:textAlignment="center"
                android:layout_weight="1"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/char_create_con_edit"
                android:textSize="20sp"
                android:padding="5dp"
                android:inputType="number"
                android:layout_weight="1"
                android:textAlignment="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/char_create_secondStats"
            android:layout_below="@id/char_create_firstStats_edits"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/char_create_int"
                android:text="@string/INT"
                android:textSize="20sp"
                android:padding="5dp"
                android:textAlignment="center"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/char_create_wis"
                android:text="@string/WIS"
                android:textSize="20sp"
                android:padding="5dp"
                android:textAlignment="center"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/char_create_cha"
                android:text="@string/CHA"
                android:textSize="20sp"
                android:padding="5dp"
                android:layout_weight="1"
                android:textAlignment="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/char_create_secondStats_edits"
            android:layout_below="@id/char_create_secondStats"
            >
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/char_create_int_edit"
                android:textSize="20sp"
                android:padding="5dp"
                android:inputType="number"
                android:textAlignment="center"
                android:layout_weight="1"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/char_create_wis_edit"
                android:textSize="20sp"
                android:padding="5dp"
                android:inputType="number"
                android:textAlignment="center"
                android:layout_weight="1"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/char_create_cha_edit"
                android:textSize="20sp"
                android:inputType="number"
                android:padding="5dp"
                android:layout_weight="1"
                android:textAlignment="center"
                />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/char_create_profLayout"
            android:layout_below="@id/char_create_secondStats_edits">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Proficiencies"
                android:textSize="20sp"
                android:textAlignment="center"
                android:id="@+id/char_create_proficiencies"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Acrobatics"
                android:layout_below="@id/char_create_proficiencies"
                android:id="@+id/char_create_acrobatics"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/char_create_acrobatics"
                android:text="Animal Handling"
                android:id="@+id/char_create_animal"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/char_create_animal"
                android:text="Arcana"
                android:id="@+id/char_create_arcana"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/char_create_arcana"
                android:text="Athletics"
                android:id="@+id/char_create_athletics"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/char_create_athletics"
                android:text="Deception"
                android:id="@+id/char_create_deception"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/char_create_deception"
                android:text="History"
                android:id="@+id/char_create_history"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/char_create_history"
                android:text="Insight"
                android:id="@+id/char_create_insight"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/char_create_animal"
                android:text="Intimidation"
                android:layout_alignTop="@id/char_create_acrobatics"
                android:id="@+id/char_create_intimidation"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/char_create_intimidation"
                android:layout_alignLeft="@id/char_create_intimidation"
                android:text="Investigation"
                android:id="@+id/char_create_investigation"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/char_create_investigation"
                android:layout_alignLeft="@id/char_create_intimidation"
                android:text="Medicine"
                android:id="@+id/char_create_medicine"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/char_create_medicine"
                android:layout_alignLeft="@id/char_create_intimidation"
                android:text="Nature"
                android:id="@+id/char_create_nature"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/char_create_nature"
                android:layout_alignLeft="@id/char_create_intimidation"
                android:text="Perception"
                android:id="@+id/char_create_perception"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/char_create_perception"
                android:layout_alignLeft="@id/char_create_intimidation"
                android:text="Performance"
                android:id="@+id/char_create_performance"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/char_create_performance"
                android:layout_alignLeft="@id/char_create_intimidation"
                android:text="Persuasion"
                android:id="@+id/char_create_persuasion"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/char_create_intimidation"
                android:layout_toRightOf="@id/char_create_performance"
                android:text="Religion"
                android:id="@+id/char_create_religion"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/char_create_religion"
                android:layout_alignLeft="@id/char_create_religion"
                android:text="Sleight of Hand"
                android:id="@+id/char_create_sleight"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/char_create_sleight"
                android:layout_alignLeft="@id/char_create_religion"
                android:text="Stealth"
                android:id="@+id/char_create_stealth"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/char_create_stealth"
                android:layout_alignLeft="@id/char_create_religion"
                android:text="Survival"
                android:id="@+id/char_create_survival"/>
        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:id="@+id/create_button"
            android:background="@drawable/border_thick"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"/>


    </RelativeLayout>

    <ListView
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:choiceMode="singleChoice"
        android:id="@+id/char_create_menu"
        android:divider="@android:color/transparent"
        android:background="@color/colorPrimary"
        android:layout_gravity="start"
        />

</android.support.v4.widget.DrawerLayout>
